--- a/style.css
+++ b/style.css
@@ -4,8 +4,14 @@
     font-family:'Ubuntu', sans-serif;
     box-sizing: border-box;
 }
+/* header{
+  position: relative;
+  z-index: 99999;
+  
+} */
 .hero{
-    
+
+    position: relative;
     height: 100vh;
     width: 100%;
     background-image: url(./images/pexels-stephan-seeber-1261728.jpg );
@@ -15,21 +21,25 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    /* z-index: 999999; */
 
 }
 
 nav{
     /* background-color: black; */
     /* height: 100px; */
-    position: relative;
+    width: 100%;
+    position: fixed;
     padding-bottom: 20px;
     align-items: center;
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding-top: 28px;
-    padding-left: 10px;
+    padding-left: 12px;
     padding-right: 10px;
+    z-index: 999999;
+
 }
 .logo{
     color: white;
@@ -40,33 +50,51 @@ nav{
 span{
     color: #dc205b;
 }
+.home{
+  display: flex;
+  /* background-color: #191919; */
+  width: 45%;
+  justify-content: space-around;
+  transform: translateX(90px)
+}
 .home a{
     text-decoration: none;
     display: inline-flex;
     padding: 10px 30px;
+    
      /*it gives border around check my bg-color*/
      /* background-color: #191919; */
-    color: antiquewhite;
+    color: white;
     font-weight:bold;
 
 }
 .home a:hover{
        /* color:#f9004d; */
        
-       border-radius: 50px 50px;
+       /* border-radius: 50px 50px;
        background-color: #f9004d;
-       transition: .2s ease-in-out;
-       transform: scale(1.2);
+       transition: .2s ease-in-out; */
+       /* transform: scale(1.2); */
+       background: rgba(255, 255, 255, 0.25);
+       box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+       backdrop-filter: blur( 3.5px );
+      -webkit-backdrop-filter: blur( 3.5px );
+       border-radius: 10px;
+       border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 .content{
     position:absolute ;
     /* display: inline-flex;
     justify-content: space-between; */
-    
-    
+    /* background-color: #191919; */
+    padding-top: 150px;
+    padding-left: 20px;
+    padding-right: 20px;
     top: 40%;
     left: 8%;
     transform: translateY(-50%);
+
+    
 }
 .tst-alg{
   text-align: left;
@@ -217,9 +245,11 @@ h1 {
       padding: 100px 0px;
       background-color: #191919;
 }
-.about img{
+.main img{
   height: auto;
   width: 430px;
+  background-color: aqua;
+  
 }
 .about-text{
   width: 550px;
@@ -272,19 +302,29 @@ h1 {
 
   height: 35px;
   align-items: center;
+  /* padding-left: 5px;
+  padding-right: 5px; */
+  /* background-color: rgb(12, 12, 12); */
+
+}
+.contact-logo{
+  /* background-color:aliceblue; */
+  width: 25%;
+  display: flex;
+  justify-content: space-around;
+
 }
 .contact-logo a{
-  /* background-color: rgb(12, 12, 12); */
   display:inline-flex;
   align-content: center;
   justify-content: space-around;
+  
   padding: 10px 10px; 
 
   /* padding-top: 3px;
   padding-left: 4px;
   padding-bottom: 5px; */
-  /* background-color: #191919; */
-  border-radius: 100px;
+  border-radius: 45%;
   
   /* padding-top: 2px;
   padding-right: 30px;
